--- a/docs/202209-scalable-formative-assessment-English.Rmd
+++ b/docs/202209-scalable-formative-assessment-English.Rmd
@@ -26,17 +26,40 @@ library(kableExtra)
 
 ```
 
+# Whova Poll (and resource page access)
+
+*How would you describe the value of formative assessment?*
+
+- Constructed response (short-answer free text)
+- Selected response (multiple choice; select all that apply)
+
+\vskip 18pt
+
+
+##### Scan with mobile phone to access resource page:
+
+![(QR Code) https://mdbeckman.github.io/ICOTS2022/](../ICOTS-QRcode.png){width=25%}
+
+
 # Motivation
 
-- Formative assessment benefits both students & instructors (GAISE, 2016; Pearl, et al., 2012)
 - "Write-to-learn" tasks improve learning outcomes (Graham, et al., 2020)
 - Critical for citizen-statisticians to communicate statistical ideas effectively (Gould, 2010)
 - Continual practice with communicating improves statistical literacy and promotes retention (Basu, et al., 2013)
+- Formative assessment benefits both students & instructors (GAISE, 2016; Pearl, et al., 2012)
+- *Logistics* of constructed response tasks jeopardize use in large-enrollment classes
+
+# Goal state
+
+*Computer-assisted formative assessment feedback for short-answer tasks in large-enrollment classes, such that instructor burden is similar to small class (~30 students)*
+
+<!-- Note: Automate the "copy / paste" workflow -->
 
 - Human-machine collaboration is a promising mechanism to assist rapid, individualized feedback at scale (Basu, 2013)
-
+- Natural language processing (NLP) involves how computers can be programmed to analyze language elements (e.g., text or speech)
 - NLP-assisted feedback has previously been studied for essays or long-answer tasks (see e.g., Attali, et al., 2008; Page, 1994)
 
+<!-- Note: as a statistician, I'm always comparing current circumstances of my data to some ideal state (SRS or randomized experiment) and negotiating compromise to achieve most desireable outcomes possible given the circumstances available. It's the same here--we want to create useful FA where there is (almost) none-->
 
 # Research Questions
 
@@ -66,42 +89,56 @@ Susan Lloyd, Matthew Beckman, Dennis Pearl, Rebecca Passonneau, Zhaohui Li, & Ze
 ### *Spoilers?!*
 - RQ1: substantial inter-rater & intra-rater agreement
 - RQ2: substantial agreement among human & NLP labeling
-- RQ3: work in progress, but promising
+- RQ3: in progress, but promising
 
 
 # Methods (Sample)
 
-Study utilized de-identified extant data & scoring rubrics from an unrelated previous study (Beckman, 2015)
+Study utilized de-identified extant data & scoring rubrics (Beckman, 2015)
 
 - 6 short-answer tasks 
 - 1,935 students total
 - 29 class sections 15 distinct institutions
 
+
 # Methods (Short-answer task)
 
-![Sample task including a stem and two shor-answer prompts.](istudio_example.png){width=90%}
 
-# Methods (Humans)
+![Sample task including a stem and two short-answer prompts.](istudio_example.png){width=90%}
+
+# Methods (RQ1)
 
 - 3 human raters typical of large-enrollment instruction team
-- responses allocated such that 63 student responses in common for each combination of raters to quantify agreement
-- only constraint: sufficient data for intra-rater analysis for person that had labeled a previous set of 178 responses 6 years prior
+- 63 student responses in common for each *combination* of raters to quantify agreement (e.g., pairwise, consensus, etc)
+- constraint: sufficient data for intra-rater analysis for person that had labeled 178 responses 6 years prior
 
-# Methods (NLP)
+
+# Methods (RQ2)
 
 The set of task-responses were randomly split four ways:  
 
-- 90% were split into the typical division of training (72%), development (9%) and test (9%)
-- 10% held in reserve for more rigorous testing
+- 90% of data for development purposes, were partitioned according to machine-learning best practice:
+    - training (72%), 
+    - development (9%)
+    - evaluation (9%)
+- 10% of data being held in reserve for more rigorous testing
 
 \vskip 14pt
 
-Two NLP algorithms were compared for accuracy using a subset of
-student responses (Li et al., 2021).
+Two NLP algorithms were compared for accuracy using a subset of student responses (Li et al., 2021).
 
-- LSTM: a logistic regression combined with a Long Short-Term Memory
-for learning vector representations
+- LSTM: a logistic regression combined with a Long Short-Term Memory for learning vector representations
 - SFRN: Semantic Feature-Wise Transformation Relation Network
+
+
+# Methods (RQ3)
+
+Manual pilot of human-generated clustering
+
+- Two reviewers independently evaluated 100 student responses that earned "partial credit" on inference tasks
+- Each reviewer provided free-text feedback to each student
+- Verbatim feedback captured for each reviewer and cross-tabulated for analysis. 
+
 
 # Results (RQ1)
 
@@ -124,7 +161,7 @@ Reliability interpretation[^1]: 0.6 < substantial < 0.8 < near perfect < 1.0
 
 # Results (RQ2)
 
-**RQ2**: What level of agreement is achieved between human raters and an NLP algorithm?
+**RQ2**: What level of agreement is achieved between human raters and the machine (an NLP algorithm)?
 
 The SFRN algorithm achieved much higher classification accuracy than LSTM (83% vs. 72%)[^2]. Human & SFRN agreement:
 
@@ -144,7 +181,7 @@ Reliability interpretation[^3]: 0.6 < substantial < 0.8 < near perfect < 1.0
 [^3]: Viera & Garrett (2005) 
 
 
-# Results (RQ3)
+# Results (RQ3 machines)
 
 **RQ3**: What sort of NLP representation leads to good clustering performance, and how does that interact with the classification algorithm?
 
@@ -153,6 +190,14 @@ Reliability interpretation[^3]: 0.6 < substantial < 0.8 < near perfect < 1.0
 - Highest consistency (0.88; D = 50), however, was achieved using a matrix factorization method that produces static representations (WTMF; Guo & Diab, 2011)
 
 [^4]: Consistency is measured as the ratio of all pairs of responses in a given class per question that are clustered the same way on two runs (in the same cluster, or not in the same cluster).
+
+# Results (RQ3 humans)
+
+![Cross-tabulation of feedback distribution for the two reviewers for the initial feedback (left) compared with the same analysis for the portion of feedback related to the statistical concept at issue (right).](ConfusionMatrices_Q2B.png){width=95%}
+
+- Reviewer 1 favored feedback on statistical concepts (only). 
+- Reviewer 2 provided same, plus a quote from the student 
+- Reviewer 2 parsed her feedback to compare her remarks related to the statistical concepts (only) with the feedback of Reviewer 1.
 
 
 # Discussion
@@ -163,11 +208,16 @@ Reliability interpretation[^3]: 0.6 < substantial < 0.8 < near perfect < 1.0
 
 - **RQ3**: Classification and clustering have competing incentives for dimensionality; Low D is better for cluster stability, High D better for classification reliability.
 
-<!-- MDB Q: Right? -->
 
 ### Future work:
 
-Currently working to evaluate human-generated feedback provided to the short answer tasks being studied.  Early indications reveal promising economy of scale for feedback provided when conditioned on consensus labels applied to task-responses. 
+- Study uses extant data from prior study collected from many classes of varying size
+    - not a single large class 
+    - we expect observed results are conservative due to additional variability across institutions and instructors, but will be investigated further
+- "Curse of dimensionality" on the machine learning side
+- Clustering performance vs semantic meaning
+    - clustering is necessary, but not sufficient, for semantic meaning
+    - semantic meaning of NLP clusters not yet rigorously studied
 
 
 # References (1/2)
