--- a/docs/202209-avaliacao-formativa-escalavel-Portugues.Rmd
+++ b/docs/202209-avaliacao-formativa-escalavel-Portugues.Rmd
@@ -27,15 +27,37 @@ library(kableExtra)
 
 ```
 
+# Whova Poll (e acesso à página de recursos)
+
+*Como você descreveria o valor da avaliação formativa?*
+
+- Resposta construída (texto livre de resposta curta)
+- Resposta selecionada (múltipla escolha; selecione todas que se aplicam)
+
+\vskip 18pt
+
+
+##### Digitalize com o celular para acessar a página de recursos:
+
+![(QR Code) https://mdbeckman.github.io/ICOTS2022/](../ICOTS-QRcode.png){width=25%}
+
+
 # Motivação
 
-- A avaliação formativa beneficia alunos e instrutores (GAISE, 2016; Pearl, et al., 2012)
 - Tarefas "escrever para aprender" melhoram os resultados de aprendizagem (Graham, et al., 2020)
 - Crítico para os cidadãos-estatísticos comunicarem ideias estatísticas de forma eficaz (Gould, 2010)
 - A prática contínua de comunicação melhora a alfabetização estatística e promove a retenção (Basu, et al., 2013)
+- A avaliação formativa beneficia alunos e instrutores (GAISE, 2016; Pearl, et al., 2012)
+- *Logística* de tarefas de resposta construídas prejudicam o uso em turmas de grande matrícula
+
+
+# Estado da meta
+
+*Feedback de avaliação formativa assistida por computador para tarefas de resposta curta em turmas de grande número de matrículas, de modo que a carga do instrutor seja semelhante à da turma pequena (~ 30 alunos)*
+
 
 - A colaboração homem-máquina é um mecanismo promissor para auxiliar o feedback rápido e individualizado em escala (Basu, 2013)
-
+- Processamento de linguagem natural (NLP) envolve como os computadores podem ser programados para analisar elementos de linguagem (por exemplo, texto ou fala)
 - O feedback assistido pela PNL foi estudado anteriormente para ensaios ou tarefas de resposta longa (ver, por exemplo, Attali, et al., 2008; Page, 1994)
 
 
@@ -56,23 +78,23 @@ library(kableExtra)
 Susan Lloyd, Matthew Beckman, Dennis Pearl, Rebecca Passonneau, Zhaohui Li, & Zekun Wang (accepted). Foundations of NLP-assisted formative assessment feedback for short-answer tasks in large enrollment statistics classes. Preprint URL: <http://arxiv.org/abs/2205.02829>
 
 
-#Spoiler?!
+# Spoiler?!
 
 - **RQ1**: Que nível de concordância é alcançado entre os avaliadores humanos treinados que rotulam (ou seja, pontuam) tarefas de resposta curta?
 
 - **RQ2**: Que nível de concordância é alcançado entre avaliadores humanos e um algoritmo de PNL?
 
-- **RQ3**: Que tipo de representação PNL leva a um bom desempenho de clustering e como isso interage com o algoritmo de classificação?
+- **RQ3**: Que tipo de representação NLP leva a um bom desempenho de clustering e como isso interage com o algoritmo de classificação?
 
 ### *Spoilers?!*
 - RQ1: acordo substancial entre avaliadores e intraavaliadores
 - RQ2: concordância substancial entre rotulagem humana e PNL
-- RQ3: trabalho em andamento, mas promissor
+- RQ3: em andamento, mas promissor
 
 
 # Métodos (amostra)
 
-O estudo utilizou dados existentes desidentificados e rubricas de pontuação de um estudo anterior não relacionado (Beckman, 2015)
+O estudo utilizou dados existentes desidentificados e rubricas de pontuação (Beckman, 2015)
 
 - 6 tarefas de resposta curta
 - 1.935 alunos no total
@@ -80,30 +102,42 @@ O estudo utilizou dados existentes desidentificados e rubricas de pontuação de
 
 # Métodos (tarefa de resposta curta)
 
+
 ![Tarefa de amostra incluindo uma haste e dois prompts de resposta curta.](istudio_example.png){width=90%}
 
 
-# Métodos (Humanos)
+# Métodos (RQ1)
 
 - 3 avaliadores humanos típicos da equipe de instrução de grande número de matrículas
-- respostas alocadas de tal forma que 63 respostas dos alunos em comum para cada combinação de avaliadores para quantificar a concordância
-- única restrição: dados suficientes para análise intra-avaliador para pessoa que rotulou um conjunto anterior de 178 respostas 6 anos antes
+- 63 respostas dos alunos em comum para cada *combinação* de avaliadores para quantificar a concordância (por exemplo, par a par, consenso, etc.)
+- restrição: dados suficientes para análise intra-avaliador para pessoa que marcou 178 respostas 6 anos antes
 
-# Métodos (PNL)
+
+# Métodos (RQ2)
 
 O conjunto de respostas à tarefa foi dividido aleatoriamente de quatro maneiras:
 
-- 90% foram divididos na divisão típica de treinamento (72%), desenvolvimento (9%) e teste (9%)
-- 10% mantidos em reserva para testes mais rigorosos
+- 90% dos dados para fins de desenvolvimento, foram particionados de acordo com as melhores práticas de aprendizado de máquina:
+    - treinamento (72%),
+    - desenvolvimento (9%)
+    - avaliação (9%)
+- 10% dos dados mantidos em reserva para testes mais rigorosos
 
 \vskip 14pt
 
-Dois algoritmos de PNL foram comparados quanto à precisão usando um subconjunto de
-respostas dos alunos (Li et al., 2021).
+Dois algoritmos de PNL foram comparados quanto à precisão usando um subconjunto de respostas dos alunos (Li et al., 2021).
 
-- LSTM: uma regressão logística combinada com uma Long Short-Term Memory
-para aprender representações vetoriais
+- LSTM: uma regressão logística combinada com uma Long Short-Term Memory para aprender representações vetoriais
 - SFRN: Rede de relação de transformação semântica baseada em recursos
+
+
+# Métodos (RQ3)
+
+Piloto manual de clustering gerado por humanos
+
+- Dois revisores avaliaram independentemente 100 respostas de alunos que ganharam "crédito parcial" em tarefas de inferência
+- Cada revisor forneceu feedback de texto livre para cada aluno
+- Feedback literal capturado para cada revisor e tabulado para análise.
 
 
 # Resultados (RQ1)
@@ -125,9 +159,10 @@ Interpretação de confiabilidade[^1]: 0,6 < substancial < 0,8 < quase perfeito 
 
 [^1]: Viera & Garrett (2005)
 
+
 # Resultados (RQ2)
 
-**RQ2**: Que nível de concordância é alcançado entre avaliadores humanos e um algoritmo de PNL?
+**RQ2**: Que nível de concordância é alcançado entre avaliadores humanos e a máquina (um algoritmo de PNL)?
 
 O algoritmo SFRN alcançou uma precisão de classificação muito maior do que o LSTM (83% vs. 72%)[^2]. Acordo Humano e SFRN:
 
@@ -147,15 +182,23 @@ Interpretação de confiabilidade[^3]: 0,6 < substancial < 0,8 < quase perfeito 
 [^3]: Viera & Garrett (2005)
 
 
-# Resultados (RQ3)
+# Resultados (máquinas RQ3)
 
-**RQ3**: Que tipo de representação de PNL leva a um bom desempenho de clustering e como isso interage com o algoritmo de classificação?
+**RQ3**: Que tipo de representação de NLP leva a um bom desempenho de clustering e como isso interage com o algoritmo de classificação?
 
 - SFRN aprende uma representação vetorial de alta dimensão (D = 512) nos dados de treinamento.
 - Experimentos com agrupamento K-means e K-medoids mostraram que o SFRN produz agrupamentos mais consistentes quando treinado novamente (0,62), em comparação com outros classificadores.[^4]
 - Maior consistência (0,88; D = 50), no entanto, foi alcançada usando um método de fatoração de matrizes que produz representações estáticas (WTMF; Guo & Diab, 2011)
 
 [^4]: A consistência é medida como a proporção de todos os pares de respostas em uma determinada classe por pergunta que são agrupadas da mesma maneira em duas execuções (no mesmo agrupamento ou não no mesmo agrupamento).
+
+# Resultados (humanos RQ3)
+
+![Tabulação cruzada da distribuição do feedback para os dois revisores para o feedback inicial (esquerda) em comparação com a mesma análise para a parte do feedback relacionada ao conceito estatístico em questão (direita).](ConfusionMatrices_Q2B.png){width=95%}
+
+- O revisor 1 favoreceu o feedback sobre conceitos estatísticos (somente).
+- O revisor 2 forneceu o mesmo, além de uma cotação do aluno
+- O Revisor 2 analisou seu feedback para comparar suas observações relacionadas aos conceitos estatísticos (somente) com o feedback do Revisor 1.
 
 
 # Discussão
@@ -177,7 +220,9 @@ Interpretação de confiabilidade[^3]: 0,6 < substancial < 0,8 < quase perfeito 
     - o agrupamento é necessário, mas não suficiente, para o significado semântico
     - significado semântico de clusters de PNL ainda não estudados rigorosamente
 
+
 # Referências (1/2)
+
 
 \footnotesize
 
